2010-10-06	Olivier Bilodeau <obilodeau@inverse.ca>
	* pf/conf/dhcp_fingerprints.conf: Added HP ProCurve Access Point and
	Controller fingerprints and Ricoh MFP.

	* pf/conf/templates/httpd.conf.apache22: Apache debugging
	instructions. Commented by default only there as a reminder.

2010-09-30	Olivier Bilodeau <obilodeau@inverse.ca>
	* pf/addons/loadMACintoDB.pl: Added minimal POD for file and added to 
	minimum test suites

2010-09-27	Olivier Bilodeau <obilodeau@inverse.ca>
	* pf/docs/PacketFence_Administration_Guide.odt: Updated documentation
	to reflect the re-worked FreeRADIUS modules using post-auth instead of
	authorize calls.

	* pf/addons/802.1X/rlm_perl_packetfence.pl, UPGRADE: Re-worked the 
	module to work on post-auth calls instead of authorize calls. This 
	avoid work being done when the EAP credentials don't even pass and
	improves overall correctness of the system (autoregistration in this
	module is now possible). It can also improve performance in network 
	with a lot of wrong 802.1X requests as they no longer exercise the 
	PacketFence module. Backport of fix #1034 from trunk;
	http://www.packetfence.org/bugs/view.php?id=1034

	* pf/conf/dhcp_fingerprints.conf: Removed a space in the fingerprints 
	that's causing the Symbian OS to be the universal fingerprint for
	nodes that don't have a fingerprint.

2010-09-24	Olivier Bilodeau <obilodeau@inverse.ca>
	* pf/addons/802.1X/rlm_perl_packetfence.pl: got rid of an unnecessary
	test

2010-09-23	Olivier Bilodeau <obilodeau@inverse.ca>
	* pf/lib/pf/vlan.pm: Removed all Logger calls setting shared 'tid' 
	information. First they were redundant since the MDC hash is global and
	second, they are corrupting other places were we could be setting the 
	'tid' (like from a web call).

2010-09-22	Olivier Bilodeau <obilodeau@inverse.ca>
	* pf/packetfence.spec: 1.9.2dev started and removed invalid dependency.
	See #882 for details;
	http://www.packetfence.org/bugs/view.php?id=882

	* pf/NEWS, pf/conf/pf-release, 