@@ -1,3 +1,10 @@
+2010-10-07      Regis Balzard <rbalzard@inverse.ca>
+	* pf/lib/pf/SNMP/HP/Controller_MSM710.pm, pf/README_SWITCHES, 
+	pf/html/admin/configuration/switches_add.php,
+	pf/html/admin/configuration/switches_edit.php, pf/t/critic.t, 
+	pf/t/hardware-snmp-objects.t, pf/t/pod.t: Added support for HP ProCurve
+	MSM710 Mobility Controller.
+
 2010-10-06	Olivier Bilodeau <obilodeau@inverse.ca>
 	* pf/conf/dhcp_fingerprints.conf: Added HP ProCurve Access Point and
 	Controller fingerprints and Ricoh MFP.
